# kbvm

./: .gitignore  .gitmodules  Cargo.toml  README.md
compile-tests/: Cargo.toml
compile-tests/home/: %
compile-tests/include-extra/rules/: x
compile-tests/src/: main.rs
compile-tests/testcases/: .gitignore
compile-tests/testcases/t0002/: expected.xkb
compile-tests/testcases/t0002_indicator/: expected.xkb  input.xkb
compile-tests/testcases/t0003/: expected.xkb  input.xkb
compile-tests/testcases/t0003_keycode/: expected.xkb
compile-tests/testcases/t0004/: expected.xkb
compile-tests/testcases/t0006/: expected.xkb
compile-tests/testcases/t0009/: expected.xkb
compile-tests/testcases/t0012/: expected.xkb
compile-tests/testcases/t0013/: expected.xkb
compile-tests/testcases/t0014/: expected.xkb  input.xkb
compile-tests/testcases/t0015/: expected.xkb
compile-tests/testcases/t0016/: expected.xkb
compile-tests/testcases/t0017/: expected.xkb
compile-tests/testcases/t0018/: expected.xkb
compile-tests/testcases/t0019/: expected.xkb
compile-tests/testcases/t0020/: expected.xkb
compile-tests/testcases/t0022/: expected.xkb
compile-tests/testcases/t0025/: expected.xkb
compile-tests/testcases/t0026/: expected.xkb
compile-tests/testcases/t0027/: expected.xkb
compile-tests/testcases/t0028/: expected.xkb
compile-tests/testcases/t0030/: expected.xkb
compile-tests/testcases/t0031/: expected.xkb
compile-tests/testcases/t0032/: expected.xkb
compile-tests/testcases/t0033/: expected.xkb  input.xkb
compile-tests/testcases/t0034/: expected.xkb
compile-tests/testcases/t0035/: expected.xkb
compile-tests/testcases/t0036/: expected.xkb
compile-tests/testcases/t0037/: expected.xkb
compile-tests/testcases/t0038/: expected.xkb
compile-tests/testcases/t0039/: expected.xkb  input.xkb
compile-tests/testcases/t0040/: expected.xkb  input.xkb
compile-tests/testcases/t0041/: expected.xkb
compile-tests/testcases/t0042/: expected.xkb
compile-tests/testcases/t0043/: expected.xkb
compile-tests/testcases/t0045/: expected.xkb
compile-tests/testcases/t0046/: expected.xkb  input.xkb
compile-tests/testcases/t0047/: expected.xkb  input.xkb
compile-tests/testcases/t0048/: expected.xkb
compile-tests/testcases/t0049/: expected.xkb
compile-tests/testcases/t0050/: expected.xkb
compile-tests/testcases/t0051/: expected.xkb
compile-tests/testcases/t0052/: expected.xkb
compile-tests/testcases/t0053/: expected.xkb
compile-tests/testcases/t0054/: expected.xkb  input.xkb
compile-tests/testcases/t0056/: expected.xkb
compile-tests/testcases/t0057/: expected.xkb
compile-tests/testcases/t0058/: expected.xkb
compile-tests/testcases/t0059/: expected.xkb
compile-tests/testcases/t0060/: expected.xkb
compile-tests/testcases/t0061/: expected.xkb
compile-tests/testcases/t0062/: expected.xkb
compile-tests/testcases/t0063/: expected.xkb
compile-tests/testcases/t0064/: expected.xkb
compile-tests/testcases/t0065/: expected.xkb
compile-tests/testcases/t0066/: expected.xkb
compile-tests/testcases/t0068/: expected.xkb  input.xkb
compile-tests/testcases/t0069/: expected.xkb
compile-tests/testcases/t0070/: expected.xkb  input.xkb
compile-tests/testcases/t0071/: expected.xkb  input.xkb
compile-tests/testcases/t0072/: expected.xkb
compile-tests/testcases/t0073/: expected.xkb
compile-tests/testcases/t0078/: expected.xkb
compile-tests/testcases/t0079/: expected.xkb
compile-tests/testcases/t0081/: expected.xkb
compile-tests/testcases/t0082/: expected.xkb
compile-tests/testcases/t0083/: expected.xkb
compile-tests/testcases/t0085/: expected.xkb
compile-tests/testcases/t0087/: expected.xkb
compile-tests/testcases/t0088/: expected.xkb
compile-tests/testcases/t0091/: expected.xkb
compile-tests/testcases/t0094/: expected.xkb
compile-tests/testcases/t0097/: expected.xkb
compile-tests/testcases/t0098/: expected.xkb
compile-tests/testcases/t0099/: expected.xkb
compile-tests/testcases/t0101/: input.xkb
compile-tests/testcases/t0103/: expected.xkb
compile-tests/testcases/t0104/: expected.xkb  input.xkb
compile-tests/testcases/t0105/: expected.xkb
compile-tests/testcases/t0107/: expected.xkb  input.xkb
compile-tests/testcases/t0108/: expected.xkb  input.xkb
compile-tests/testcases/t0109/: expected.xkb  input.xkb
compile-tests/testcases/t0110/: expected.xkb
compile-tests/testcases/t0111/: expected.xkb
compile-tests/testcases/t0118/: expected.xkb
compile-tests/testcases/t0121/: input.xkb
compile-tests/testcases/t0124/: expected.xkb
compile-tests/testcases/t0128/: expected.xkb
compile-tests/testcases/t0130/: expected.xkb
compile-tests/testcases/t0134/: input.xkb
kbvm/: Cargo.toml  README.md  build.rs  release-notes.md
kbvm-benches/: Cargo.toml
kbvm-benches/benches/: benchmark.rs  compose.rs  state_machine.rs
kbvm-benches/src/: main.rs
kbvm-cli/: Cargo.toml  README.md
kbvm-cli/src/: cli.rs  compile_rmlvo.rs  compile_xkb.rs  dump_x11.rs  evdev.rs  expand_rmlvo.rs  generate.rs  main.rs  output.rs  test_wayland.rs  utils.rs
kbvm-cli/src/evdev/: generated.rs
kbvm-cli/src/output/: ansi.rs  json.rs
kbvm-proc/: Cargo.toml
kbvm-proc/src/: ad_hoc_display.rs  clone_with_delta.rs  diagnostic_kind.rs  lib.rs
kbvm/benches/: benchmark.rs
kbvm/src/: builder.rs  components.rs  controls.rs  evdev.rs  from_bytes.rs  group.rs  group_type.rs  index_map.rs  key_storage.rs  keycode.rs  keysym.rs  lib.rs  lookup.rs  macros.rs  modifier.rs  phf.rs  routine.rs  state_machine.rs  syms.rs  xkb.rs
kbvm/src/builder/: tests.rs
kbvm/src/components/: tests.rs
kbvm/src/evdev/: generated.rs
kbvm/src/from_bytes/: tests.rs
kbvm/src/keysym/: generated.rs  tests.rs
kbvm/src/lookup/: tests.rs
kbvm/src/modifier/: tests.rs
kbvm/src/routine/: tests.rs
kbvm/src/state_machine/: tests.rs
kbvm/src/xkb/: clone_with_delta.rs  code.rs  code_loader.rs  code_map.rs  code_slice.rs  compose.rs  (+25 more)
libxkbcommon-tests/: meson.build
libxkbcommon-tests/src/: utils.h
libxkbcommon-tests/test/: common.c  keysym.c
(+1148 files in other folders)
