[package]
name = "compile-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
kbvm = { path = "../kbvm" }
integration-test-utils = { path = "../integration-test-utils" }
thiserror = "2.0.8"
error_reporter = "1.0.0"
isnt = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
bstr = "1.11.3"
