[package]
name = "compile-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
kbvm = { path = "../kbvm" }
integration-test-utils = { path = "../integration-test-utils" }
thiserror = "2.0.8"
error_reporter = "1.0.0"
isnt = "0.2.0"
serde = { version = "1.0.216", features = ["derive"] }
toml = "1.1.3"
bstr = "1.11.3"
