[package]
name = "kbvm-benches"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
kbvm = { path = "../kbvm", features = ["compose"] }

[dev-dependencies]
libxkbcommon-test-linker = { path = "../libxkbcommon-test-linker" }
criterion = "0.5.1"
walkdir = "2.5.0"
parking_lot = "0.12.3"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "state_machine"
harness = false

[[bench]]
name = "compose"
harness = false
