[package]
name = "kbvm-cli"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/mahkoh/kbvm"
license = "GPL-3.0-only"
description = "A CLI for working with XKB"
keywords = ["cli", "linux", "xkb", "wayland"]
categories = ["command-line-utilities", "compilers", "visualization"]
rust-version = "1.85.0"

[[bin]]
name = "kbvm"
path = "src/main.rs"

[dependencies]
kbvm = { version = "0.1.5", path = "../kbvm", features = ["compose"] }
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.42"
env_logger = "0.11.6"
log = "0.4.25"
hashbrown = "0.15.2"
memmap2 = "0.9.5"
owo-colors = { version = "4.1.0", features = ["supports-color", "supports-colors"] }
debug-fn = "1.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
isnt = "0.1.0"
error_reporter = "1.0.0"
raw-stdio = "0.1.0"
utf8-console = "0.1.0"

[target.'cfg(unix)'.dependencies]
wl-client = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
uapi = "0.2.13"

[build-dependencies]
wl-client-builder = "0.2.0"
