[package]
name = "kbvm-proc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mahkoh/kbvm"
license = "MIT OR Apache-2.0"
description = "Internal dependency of kbvm"
rust-version = "1.83.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.90", features = ["derive"] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
