[package]
name = "kbvm"
version = "0.1.0"
edition = "2021"

[features]
default = ["log"]
log = ["dep:log"]

[dependencies]
kbvm-proc = { path = "../kbvm-proc" }
thiserror = { version = "2.0.5", default-features = false }
bstr = { version = "1.11.0", default-features = false, features = ["alloc"] }
arrayvec = { version = "0.7.6", default-features = false }
linearize = { version = "0.1.1", default-features = false, features = ["derive"] }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher"] }
isnt = { version = "0.1.0", default-features = false }
debug-fn = { version = "1.0.0", default-features = false }
smallvec = { version = "1.13.2", default-features = false, features = ["union"] }
indexmap = { version = "2.7.0", default-features = false }
cfg-if = { version = "1.0.0", default-features = false }
secure-execution = { version = "0.1.0", default-features = false }
log = { version = "0.4", default-features = false, optional = true }

[build-dependencies]
pkg-config = "0.3.31"

[dev-dependencies]
libxkbcommon-test-linker = { path = "../libxkbcommon-test-linker" }
walkdir = "2.5.0"
